--- a/api/package.json
+++ b/api/package.json
@@ -1,8 +1,8 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
+  "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "test": "jest",
     "dev": "nodemon server.js",
@@ -23,9 +23,6 @@
     "supertest": "^7.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.27.1",
-    "@babel/preset-env": "^7.27.1",
-    "babel-jest": "^29.7.0",
     "prettier": "^3.5.3"
   }
 }
